--- a/04intro-css/shetland.css
+++ b/04intro-css/shetland.css
@@ -3,9 +3,7 @@ font-family: 'Oswald', sans-serif;
 font-size: 16px;
 font-weight: 300;
 margin: 0;
-    background-color:#182625;
-    
-    
+    background-color:#182625;  
 }
 body h1 {
     color:#F27B13;
@@ -15,6 +13,7 @@ body h1 {
 header {
     background-color:#28403D;
     padding: 1rem 2vw;
+    
 } 
 header h1 {
     margin: 0;
@@ -25,26 +24,27 @@ header h2 {
 }
 header p {
     margin: 0;
-     color: #689BA6;
-    letter-spacing: .5px
-        padding: 1remx 2vw;
+     color: #C2EDF2;
+    letter-spacing: .5px;
+        padding: 1rem 2vw;
+    font-size: 400;
 }
 
 /*nav stuff goes here*/
 nav ul {
-    background-color: #F27B13;
+    background-color: #284B59;
    list-style-type: none;
     padding: 0 2vw; 
     margin: 0;
     display: flex;
 }
-nav a{
-    font-size; 1.1rem;
+nav a {
+    font-size: 1.1rem;
     text-decoration: none;
-    color: #284B59;
-    font-weight: 700;
-    display: block;
-    padding: .83rem 2rem;
+    color: #C2EDF2;
+    font-weight:700;
+    display:block;
+    padding:.83rem 2rem;
 }
 nav li.active a {
     background-color: #024873;
@@ -60,7 +60,8 @@ main { padding: 1rem 2vw;
 }
 main a {
     text-decoration: none;
-    color: #F27B13;
+    color: #F27244;
+    font-size: 400;
 }
 main h1 { 
 color: #F27B13;
