--- a/04intro-css/shetland.css
+++ b/04intro-css/shetland.css
@@ -40,11 +40,13 @@ nav a {
     font-weight:700;
     display:block;
     padding: 1rem 2rem;
+    border-style: solid;
+    border-color: white;
 }
 nav li.active a {
     background-color: #024873;
     color: #f2b705;
-}
+}  
 nav a:hover { 
 color: #F25757;
 }
@@ -102,7 +104,7 @@ main li h3{
 main li { 
     color: #C2EDF2;
     padding: 0;
-    list-style-type: none;   
+   
 }
   main a:hover {
     color:#F25757;
