--- a/05images/shetland.css
+++ b/05images/shetland.css
@@ -40,6 +40,8 @@ nav a {
     font-weight:700;
     display:block;
     padding: 1rem 2rem;
+      border-style: solid;
+    border-color: white;
 }
 nav li.active a {
     background-color: #024873;
@@ -102,7 +104,7 @@ main li h3{
 main li { 
     color: #C2EDF2;
     padding: 0;
-    list-style-type: none;   
+      
 }
   main a:hover {
     color:#F25757;
